--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-# Don’t commit the following directories created by pub.
-.buildlog
-.pub/
-build/
-packages
+# Don’t commit the following directories
+data/
 
-# Or the files created by dart2js.
-*.dart.js
-*.js_
-*.js.deps
-*.js.map
-
-# Include when developing application packages.
-pubspec.lock
