--- a/build.gradle
+++ b/build.gradle
@@ -130,16 +130,22 @@ eclipse.classpath.plusConfigurations += [configurations.provided]
 
 dependencies {
   // web dependencies
-  compile("au.com.auspost.boot:auspost-spring-boot-starter-web:${dependencyVersionAuspostSpringBoot}")
+  // compile("au.com.auspost.boot:auspost-spring-boot-starter-web:${dependencyVersionAuspostSpringBoot}")
 
   // service monitoring and stats (exposed via /_admin context path)
-  compile("au.com.auspost.boot:auspost-spring-boot-starter-actuator:${dependencyVersionAuspostSpringBoot}")
+  // compile("au.com.auspost.boot:auspost-spring-boot-starter-actuator:${dependencyVersionAuspostSpringBoot}")
 
   // swagger documentation
-  compile("au.com.auspost.boot:auspost-spring-boot-starter-swagger:${dependencyVersionAuspostSpringBoot}")
+  // compile("au.com.auspost.boot:auspost-spring-boot-starter-swagger:${dependencyVersionAuspostSpringBoot}")
 
   // database dependencies
-  compile("au.com.auspost.boot:auspost-spring-boot-starter-data-jpa:${dependencyVersionAuspostSpringBoot}")
+  // compile("au.com.auspost.boot:auspost-spring-boot-starter-data-jpa:${dependencyVersionAuspostSpringBoot}")
+
+  compile 'org.springframework.boot:spring-boot-starter:1.2.7.RELEASE'
+  compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.2.7.RELEASE'
+  compile 'org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE'
+
+  compile 'com.h2database:h2:1.4.190'
 
   // test dependencies
   testCompile("org.springframework.boot:spring-boot-starter-test:${dependencyVersionSpringBoot}")
