--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,7 @@ dependencies {
   compile 'org.springframework.boot:spring-boot-starter:1.2.7.RELEASE'
   compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.2.7.RELEASE'
   compile 'org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE'
+  compile 'org.springframework.boot:spring-boot-starter-security:1.2.7.RELEASE'
 
   compile 'com.h2database:h2:1.4.190'
 
