Add MySQL configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+## H2 Database
 logging.level.org.h2.server: DEBUG
+
+## MySQL Database
+spring.datasource.url= jdbc:mysql://localhost:3306/paf
+spring.datasource.username=paf
+spring.datasource.password=password
+
+logging.level.org.hibernate: DEBUG
+
+##
+spring.jpa.hibernate.ddl-auto=none
