--- a/build.gradle
+++ b/build.gradle
@@ -150,6 +150,9 @@ dependencies {
 
     compile 'mysql:mysql-connector-java'
 
+    // model and dto object mapper
+    compile 'org.modelmapper:modelmapper:0.7.4'
+
     // test dependencies
     testCompile("org.springframework.boot:spring-boot-starter-test:${dependencyVersionSpringBoot}")
 }
