--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/paf
 spring.datasource.username=paf
 spring.datasource.password=password
 
-logging.level.org.hibernate: DEBUG
+logging.level.org.hibernate: ERROR
 
 ##
 spring.jpa.hibernate.ddl-auto=none
