--- a/build.gradle
+++ b/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.2.7.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-security:1.2.7.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-thymeleaf:1.2.7.RELEASE'
 
     compile 'com.h2database:h2:1.4.190'
 
@@ -152,6 +153,10 @@ dependencies {
 
     // model and dto object mapper
     compile 'org.modelmapper:modelmapper:0.7.4'
+
+    compile 'org.webjars:react:0.14.0'
+    compile 'org.webjars:jquery:1.11.3'
+    compile 'org.webjars:showdown:0.3.1'
 
     // test dependencies
     testCompile("org.springframework.boot:spring-boot-starter-test:${dependencyVersionSpringBoot}")
