--- a/build.gradle
+++ b/build.gradle
@@ -154,9 +154,9 @@ dependencies {
     // model and dto object mapper
     compile 'org.modelmapper:modelmapper:0.7.4'
 
+    // webjars.org client side libraries into JAR files
     compile 'org.webjars:react:0.14.0'
     compile 'org.webjars:jquery:1.11.3'
-    compile 'org.webjars:showdown:0.3.1'
 
     // test dependencies
     testCompile("org.springframework.boot:spring-boot-starter-test:${dependencyVersionSpringBoot}")
