Refactor and remove auspost facts

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,6 @@ org.gradle.daemon=false
 # daemon to be shutdown when not in use.
 org.gradle.daemon.idletimeout=900000
 
-# Australia Post libraries
-dependencyVersionAuspostSpringBoot=1.0.6
-
 # 3rd Party Library Versions
 dependencyVersionSpringBootGradlePlugin=1.2.2.RELEASE
 dependencyVersionGradleReleasePlugin=2.2.2
@@ -18,7 +15,7 @@ dependencyVersionSpringBoot=1.2.2.RELEASE
 dependencyVersionJacocoTool=0.7.2.201409121644
 
 # project artifact information
-groupId=au.com.auspost
+groupId=org.paradise
 artifactId=microservice
 version=1.0.0-SNAPSHOT
 
