--- a/build.gradle
+++ b/build.gradle
@@ -105,11 +105,11 @@ targetCompatibility = 1.8
 // This is used to add jar dependencies that are needed for compile time only
 // but should not be bundled in the war/ear projects.
 configurations { provided }
-sourceSets.main.compileClasspath += [configurations.provided]
-sourceSets.test.compileClasspath += [configurations.provided]
-sourceSets.test.runtimeClasspath += [configurations.provided]
+sourceSets.main.compileClasspath += configurations.provided
+sourceSets.test.compileClasspath += configurations.provided
+sourceSets.test.runtimeClasspath += configurations.provided
 // optional: if using 'eclipse' plugin
-eclipse.classpath.plusConfigurations += [configurations.provided]
+eclipse.classpath.plusConfigurations += configurations.provided
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter:1.2.7.RELEASE'
