Refactor dependencies version properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,12 @@ org.gradle.daemon.idletimeout=900000
 # 3rd Party Library Versions
 dependencyVersionSpringBootGradlePlugin=1.2.2.RELEASE
 dependencyVersionGradleReleasePlugin=2.2.2
-dependencyVersionSpringBoot=1.2.2.RELEASE
+dependencyVersionSpringBoot=1.2.7.RELEASE
 dependencyVersionJacocoTool=0.7.2.201409121644
+dependencyVersionH2=1.4.190
+dependencyVersionModelMapper=0.7.4
+dependencyVersionReactJS=0.14.0
+dependencyVersionJQuery=1.11.3
 
 # project artifact information
 groupId=org.paradise
