--- a/build.gradle
+++ b/build.gradle
@@ -112,23 +112,23 @@ sourceSets.test.runtimeClasspath += configurations.provided
 eclipse.classpath.plusConfigurations += configurations.provided
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter:1.2.7.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.2.7.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-security:1.2.7.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-thymeleaf:1.2.7.RELEASE'
+    compile "org.springframework.boot:spring-boot-starter:${dependencyVersionSpringBoot}"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa:${dependencyVersionSpringBoot}"
+    compile "org.springframework.boot:spring-boot-starter-web:${dependencyVersionSpringBoot}"
+    compile "org.springframework.boot:spring-boot-starter-security:${dependencyVersionSpringBoot}"
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf:${dependencyVersionSpringBoot}"
 
-    compile 'com.h2database:h2:1.4.190'
+    compile "com.h2database:h2:${dependencyVersionH2}"
 
-    compile 'mysql:mysql-connector-java'
+    compile "mysql:mysql-connector-java"
 
     // model and dto object mapper
-    compile 'org.modelmapper:modelmapper:0.7.4'
+    compile "org.modelmapper:modelmapper:${dependencyVersionModelMapper}"
 
     // webjars.org client side libraries into JAR files
-    compile 'org.webjars:react:0.14.0'
-    compile 'org.webjars:jquery:1.11.3'
+    compile "org.webjars:react:${dependencyVersionReactJS}"
+    compile "org.webjars:jquery:${dependencyVersionJQuery}"
 
     // test dependencies
-    testCompile("org.springframework.boot:spring-boot-starter-test:${dependencyVersionSpringBoot}")
+    testCompile "org.springframework.boot:spring-boot-starter-test:${dependencyVersionSpringBoot}"
 }
