--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,13 @@ dependencyVersionSpringBootGradlePlugin=1.2.2.RELEASE
 dependencyVersionGradleReleasePlugin=2.2.2
 dependencyVersionSpringBoot=1.2.7.RELEASE
 dependencyVersionJacocoTool=0.7.2.201409121644
+dependencyVersionMySQLConnector=5.1.34
 dependencyVersionH2=1.4.190
 dependencyVersionModelMapper=0.7.4
 dependencyVersionReactJS=0.14.0
 dependencyVersionJQuery=1.11.3
+dependencyVersionLiquibase=3.4.2
+dependencyVersionLiquibasePlugin=1.2.0
 
 # project artifact information
 groupId=org.paradise
