--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 ## H2 Database
-logging.level.org.h2.server: DEBUG
+#spring.datasource.url=jdbc:h2:mem:testdb;Mode=MySQL
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.platform=h2
 
 ## MySQL Database
-spring.datasource.url= jdbc:mysql://localhost:3306/paf
+spring.datasource.url=jdbc:mysql://localhost:3306/paf
 spring.datasource.username=paf
 spring.datasource.password=password
 
-logging.level.org.hibernate: ERROR
+##
+logging.level.org.h2.server=DEBUG
+logging.level.org.hibernate=ERROR
 
 ##
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.continue-on-error=true
