--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@
 #spring.datasource.platform=h2
 
 ## MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/paf
-spring.datasource.username=paf
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=testdb
 spring.datasource.password=password
 
 ##
@@ -15,6 +15,6 @@ logging.level.org.hibernate=ERROR
 
 ##
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.continue-on-error=true
