--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@
 #spring.datasource.platform=h2
 
 ## MySQL Database
+#spring.datasource.url=jdbc:mysql://localhost:3306/paf
+#spring.datasource.username=paf
+#spring.datasource.password=password
+
+## MySQL Test Database
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=testdb
 spring.datasource.password=password
