--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
-## H2 Database
-#spring.datasource.url=jdbc:h2:mem:testdb;Mode=MySQL
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.platform=h2
-
 ## MySQL Database
-#spring.datasource.url=jdbc:mysql://localhost:3306/paf
-#spring.datasource.username=paf
-#spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/paf
+spring.datasource.username=paf
+spring.datasource.password=password
 
 ## MySQL Test Database
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
-spring.datasource.username=testdb
-spring.datasource.password=password
+spring.datasource.test.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.test.username=testdb
+spring.datasource.test.password=password
+
+## H2 Database
+spring.datasource.integration.url=jdbc:h2:mem:testdb;Mode=MySQL
+spring.datasource.integration.username=sa
+spring.datasource.integration.password=
+spring.datasource.integration.platform=h2
 
 ##
 logging.level.org.h2.server=DEBUG
@@ -20,6 +20,6 @@ logging.level.org.hibernate=ERROR
 
 ##
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.datasource.continue-on-error=true
