--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ dependencyVersionReactJS=0.14.0
 dependencyVersionJQuery=1.11.3
 dependencyVersionLiquibase=3.4.2
 dependencyVersionLiquibasePlugin=1.2.0
+dependencyVersionJUnitToolbox=2.2
 
 # project artifact information
 groupId=org.paradise
