--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,9 @@ dependencyVersionJQuery=1.11.3
 dependencyVersionLiquibase=3.4.2
 dependencyVersionLiquibasePlugin=1.2.0
 dependencyVersionJUnitToolbox=2.2
+dependencyVersionGroovy=2.4.5
+dependencyVersionSpock=1.0-groovy-2.4
+dependencyVersionHttpBuilder=0.7.1
 
 # project artifact information
 groupId=org.paradise
