Add build and test Groovy BDD test during project build stage

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ apply plugin: 'net.researchgate.release'
 // Liquibase plugin
 apply plugin: 'org.liquibase.gradle'
 
+// build and run Spock test
+apply plugin: 'groovy'
+
 repositories {
     maven(nexus)
 }
