--- a/build.gradle
+++ b/build.gradle
@@ -192,9 +192,13 @@ eclipse.classpath.plusConfigurations += configurations.provided
 dependencies {
     compile "org.springframework.boot:spring-boot-starter:${dependencyVersionSpringBoot}"
     compile "org.springframework.boot:spring-boot-starter-data-jpa:${dependencyVersionSpringBoot}"
-    compile "org.springframework.boot:spring-boot-starter-web:${dependencyVersionSpringBoot}"
     compile "org.springframework.boot:spring-boot-starter-security:${dependencyVersionSpringBoot}"
     compile "org.springframework.boot:spring-boot-starter-thymeleaf:${dependencyVersionSpringBoot}"
+
+    compile "org.springframework.boot:spring-boot-starter-jetty:${dependencyVersionSpringBoot}"
+    compile ("org.springframework.boot:spring-boot-starter-web:${dependencyVersionSpringBoot}") {
+        exclude module: "spring-boot-starter-tomcat:${dependencyVersionSpringBoot}"
+    }
 
     compile "com.h2database:h2:${dependencyVersionH2}"
 
@@ -221,6 +225,7 @@ dependencies {
 
     // mandatory dependencies for using Spock
     testCompile "org.spockframework:spock-core:${dependencyVersionSpock}"
-    testCompile "org.codehaus.groovy.modules.http-builder:http-builder:${dependencyVersionHttpBuilder}"
+    testCompile "org.spockframework:spock-spring:${dependencyVersionSpock}"
 
+    testCompile "org.codehaus.groovy.modules.http-builder:http-builder:${dependencyVersionHttpBuilder}"
 }
