--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,12 @@ dependencyVersionJUnitToolbox=2.2
 dependencyVersionGroovy=2.4.5
 dependencyVersionSpock=1.0-groovy-2.4
 dependencyVersionHttpBuilder=0.7.1
+dependencyVersionGeb=0.12.2
+dependencyVersionSeleniumDriver=2.48.2
+dependencyVersionPhantomJsDriver=1.2.1
+chromeDriverVersion=2.19
+phantomJsVersion=1.9.7
+
 
 # project artifact information
 groupId=org.paradise
