Implement Get BDD test for QR as Postal Address home page

--- a/build.gradle
+++ b/build.gradle
@@ -303,4 +303,7 @@ dependencies {
     // PhantomJs driver pulls in a different selenium version
         transitive = false
     }
+
+    // Selenium support
+    testCompile "org.seleniumhq.selenium:selenium-support:${dependencyVersionSeleniumSupport}"
 }
