--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ dependencyVersionSpock=1.0-groovy-2.4
 dependencyVersionHttpBuilder=0.7.1
 dependencyVersionGeb=0.12.2
 dependencyVersionSeleniumDriver=2.48.2
+dependencyVersionSeleniumSupport=2.48.2
 dependencyVersionPhantomJsDriver=1.2.1
 chromeDriverVersion=2.19
 phantomJsVersion=1.9.7
