--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
-# Enable the gradle build daemon.  The daemon is a gradle process that
-# remains running between builds.  This significantly speeds up build
+# Enable the gradle build daemon. The daemon is a gradle process that
+# remains running between builds. This significantly speeds up build
 # times, but has a very large memory overhead, it uses & holds 700MB
 # so turning off for now.
-org.gradle.daemon=false
+org.gradle.daemon=true
+
 # Shutdown the daemon after a period of inactivity in milliseconds. The
 # daemon consumes a large amount of RAM so it is preferable for the
 # daemon to be shutdown when not in use.
