Rename artifact name to "paf"

--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,7 @@ phantomJsVersion=1.9.7
 
 # project artifact information
 groupId=org.paradise
-artifactId=microservice
+artifactId=paf
 version=1.0.0-SNAPSHOT
 
 # automatically increment version numbers when running: gradle release
