--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,8 @@ dependencyVersionGeb=0.12.2
 dependencyVersionSeleniumDriver=2.48.2
 dependencyVersionSeleniumSupport=2.48.2
 dependencyVersionPhantomJsDriver=1.2.1
+dependencyVersionGradleDocker=1.2
+
 chromeDriverVersion=2.19
 phantomJsVersion=1.9.7
 
