--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,8 @@ dependencyVersionSeleniumDriver=2.48.2
 dependencyVersionSeleniumSupport=2.48.2
 dependencyVersionPhantomJsDriver=1.2.1
 dependencyVersionGradleDocker=1.2
+dependencyVersionSpringfoxSwagger=2.3.0
+dependencyVersionSwaggerUI=2.1.3
 
 chromeDriverVersion=2.19
 phantomJsVersion=1.9.7
