--- a/build.gradle
+++ b/build.gradle
@@ -315,7 +315,7 @@ dependencies {
 
     testCompile "org.spockframework:spock-spring:${dependencyVersionSpock}"
 
-    testCompile( 'com.athaydes:spock-reports:1.2.8' ) {
+    testCompile("com.athaydes:spock-reports:${dependencyVersionHawtioSpringBoot}") {
         // this avoids affecting your version of Groovy / Spock
         transitive = false
     }
