--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,7 @@ dependencyVersionPhantomJsDriver=1.2.1
 dependencyVersionGradleDocker=1.2
 dependencyVersionSpringfoxSwagger=2.3.0
 dependencyVersionSwaggerUI=2.1.3
+dependencyVersionSpockReports=1.2.8
 
 chromeDriverVersion=2.19
 phantomJsVersion=1.9.7
