--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,7 @@ dependencyVersionGradleDocker=1.2
 dependencyVersionSpringfoxSwagger=2.3.0
 dependencyVersionSwaggerUI=2.1.3
 dependencyVersionSpockReports=1.2.8
+dependencyVersionHawtio=1.4.59
 
 chromeDriverVersion=2.19
 phantomJsVersion=1.9.7
