--- a/gradle.properties
+++ b/gradle.properties
@@ -47,9 +47,9 @@ version=1.0.0-SNAPSHOT
 gradle.release.useAutomaticVersion=true
 
 # Nexus URL and authentication settings
-nexusRepoURL=http://localhost:8081/nexus/content/groups/public
-nexusReleaseURL=http://localhost:8081/nexus/content/repositories/releases
-nexusSnapshotURL=http://localhost:8081/nexus/content/repositories/snapshots
-nexusBuildUserToken=GIfjm6R8
-nexusBuildPassToken=FTPik9B2aeSMqySF26zhSfgNM68yydH6bbxG4oP1cCai
+#nexusRepoURL=http://localhost:8081/nexus/content/groups/public
+#nexusReleaseURL=http://localhost:8081/nexus/content/repositories/releases
+#nexusSnapshotURL=http://localhost:8081/nexus/content/repositories/snapshots
+#nexusBuildUserToken=GIfjm6R8
+#nexusBuildPassToken=FTPik9B2aeSMqySF26zhSfgNM68yydH6bbxG4oP1cCai
 
