Add Joda Time and Jackson Datatype Joda dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -303,6 +303,10 @@ dependencies {
     // Hacky way to let springfox-swagger-ui work with webjar convention which contains the swagger-ui static content
     compile "org.webjars:swagger-ui:${dependencyVersionSwaggerUI}"
 
+    // Utilities
+    compile "joda-time:joda-time:${dependencyVersionJodaTime}"
+    compile "com.fasterxml.jackson.datatype:jackson-datatype-joda:${dependencyVersionJacksonDatetypeJoda}"
+
     // test dependencies
     testCompile "org.springframework.boot:spring-boot-starter-test:${dependencyVersionSpringBoot}"
 
