Comment out local Nexus repo settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,10 +48,9 @@ version=1.0.0-SNAPSHOT
 # automatically increment version numbers when running: gradle release
 gradle.release.useAutomaticVersion=true
 
-# Nexus URL and authentication settings
-nexusRepoURL=http://localhost:8081/nexus/content/groups/public
-nexusReleaseURL=http://localhost:8081/nexus/content/repositories/releases
-nexusSnapshotURL=http://localhost:8081/nexus/content/repositories/snapshots
-nexusBuildUserToken=GIfjm6R8
-nexusBuildPassToken=FTPik9B2aeSMqySF26zhSfgNM68yydH6bbxG4oP1cCai
-
+## Nexus URL and authentication settings. Global Nexus repository settings in $HOME/.gradle/gradle.properties
+# nexusRepoURL=http://localhost:8081/nexus/content/groups/public
+# nexusReleaseURL=http://localhost:8081/nexus/content/repositories/releases
+# nexusSnapshotURL=http://localhost:8081/nexus/content/repositories/snapshots
+# nexusBuildUserToken=GIfjm6R8
+# nexusBuildPassToken=FTPik9B2aeSMqySF26zhSfgNM68yydH6bbxG4oP1cCai
